# courceProject2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ActivateFunction.cpp  ActivateFunction.h  ActivationFunction.cpp  ActivationFunction.h  AdamOptimizer.cpp  AdamOptimizer.h  CMakeLists.txt  ConstantOptimizer.cpp  ConstantOptimizer.h  CustomTypes.h  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  Matrix.cpp  Matrix.h  MomentumOptimizer.cpp  MomentumOptimizer.h  Net.cpp  Net.h  NetBuilder.cpp  NetBuilder.h  Optimizer.cpp  Optimizer.h  README.md  Random.cpp  Random.h  SmoothFunction.cpp  SmoothFunction.h  exception.cpp  exception.h  main.cpp  test.cpp  test.h
